# snapcast-client

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  dissector.lua
server/: Cargo.toml
server/src/: config.rs  main.rs  net.rs  pipeline.rs  sink.rs  source.rs  spotify.rs
src/: client.rs  decoder.rs  framing.rs  lib.rs  main.rs  mdns.rs  proto.rs  server.rs
src/playback/: alsa.rs  file.rs  mod.rs  pulse.rs  tcp.rs
