[package]
name = "snapcast-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.9.0"
anyhow = "1.0.81"
byte-slice-cast = "1.2.2"
#libpulse-binding = "2.28.1"
#libpulse-simple-binding = "2.28.1"
opus = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
