[package]
name = "snapcast-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
pulse = ["dep:libpulse-binding", "libpulse-simple-binding"]
alsa = ["dep:alsa"]
opus = ["dep:opus"]
flac = ["dep:claxon"]

[dependencies]
anyhow = "1.0.81"

alsa = { version = "0.9.0", optional = true }
libpulse-binding = { version = "2.28.1", optional = true }
libpulse-simple-binding = { version = "2.28.1", optional = true }
opus = { version = "0.3.0", optional = true }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
enum_dispatch = "0.3.12"
circular-buffer = "0.1.6"
clap = { version = "^4.4.18", features = ["derive"] }
simple-mdns = {version = "0.6.2", features = ["sync"]}
simple-dns = "0.7.0"
log = "0.4.21"
claxon = { git = "https://github.com/DavidVentura/claxon.git", optional = true, branch = "borrow-api" }

[lib]
src = "src/lib.rs"

[[bin]]
name = "server"
#src = "src/bin/server.rs"
