[package]
name = "snapcast-server"
version = "0.1.0"
edition = "2021"

[dependencies]
snapcast-client = { path = "..", default-features = false }
anyhow = "1.0.81"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rubato = "0.15"
audiopus = "0.2"
librespot = { version = "0.8", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "with-libmdns",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3"
mdns-sd = "0.20"
